# bug-response-patterns-replication

./: MANIFEST.md  README.md  REPRODUCE.md  artifact_integrity_report.md  file_manifest.csv  py_compile_report.txt  pyproject.toml  requirements.txt
configs/: default.yaml  selected_projects.yaml
docs/: missing_value_policy.md  pipeline.md
reports/build_events/: events_quality_counts.csv
reports/cluster_profiles/: candidate_role_taxonomy_paper_labels.csv  candidate_role_taxonomy_paper_labels.md
reports/clustering/: cluster_size_table.csv  hdbscan_parameter_results.csv
reports/data_audit/: selected_projects.csv
reports/features/: actor_feature_summary.csv  preprocessing_summary.md
reports/paper_tables/: table_rq3_k9_bug_response_patterns.csv
reports/results/: cluster_stability_by_label.csv  method_comparison_summary.md  stability_summary.md
scripts/: 01_db_audit.py  02_project_availability.py  03_select_projects.py  04_extract_events.py  04a_events_extraction_preflight.py  04b_audit_events.py  05_normalize_actors.py  05b_enrich_actor_metadata.py  06_build_actor_features.py  07_preprocess_features.py  08_cluster_roles.py  09_build_cluster_profiles.py  10_stability_analysis.py  11_project_and_cluster2_diagnostics.py  12_candidate_role_protocol.py  12b_prepare_role_taxonomy_paper_assets.py  13_issue_lifecycle_analysis.py  25_rq3_role_composition_taxonomy.py  25b_rq3_k_sensitivity_extended.py  25c_prepare_rq3_k9_paper_assets.py  26_rq3_role_composition_validation.py  28_build_esem_replication_package.py
src/smartshark_roles/: __init__.py  anonymize.py  io.py  (+12 more)
(+8 files in other folders)
