[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartshark-roles"
version = "0.1.0"
description = "Reproducible SmartSHARK role extraction experiment pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pymongo>=4.0",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "hdbscan>=0.8",
  "umap-learn>=0.5",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
